--- a/application.yaml
+++ b/application.yaml
@@ -4,14 +4,13 @@ metadata:
   name: myapp-argo-application
   namespace: argocd
 spec:
-  project: defult
-
+  project: default
   source:
     repoURL: https://github.com/ToviKolitz/argodemoconfig.git
     targetRevision: HEAD
     path: dev
   destination:
-    server: https://kubernetes.defult.svc
+    server: https://kubernetes.default.svc
     namespace: myapp
   syncPolicy:
     syncOptions:
